# squidasm

./: .bumpversion.cfg  .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yaml  BETA-CHANGELOG.md  CHANGELOG.md  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_requirements.txt
QNE-apps/: README.md  bqc.py  chsh_game.py  distributed_cnot.py  magic_square.py  qkd.py  state_teleportation.py  use_distributed_cnot.py  use_qkd.py  use_teleport.py  util.py  validate_distributed_cnot.py  validate_distributed_cphase.py
Schedulers_Marit/: README.md  dtw_scheduler.py  mw_scheduler.py
blueprint/: __init__.py  base_configs.py  builder_utils.py  metro_hub.py  metro_hub_builder.py  network.py  (+5 more)
submodules/netsquid-netbuilder/: README.rst  setup.cfg
submodules/netsquid-netbuilder/examples/epr_multi_node/: protocols.py  run_simulation.py
submodules/netsquid-netbuilder/examples/epr_repeater_chain/: protocols.py  run_simulation.py
submodules/netsquid-netbuilder/examples/epr_two_node/: config.yaml  protocols.py  run_simulation.py
submodules/netsquid-netbuilder/examples/example_1/: protocols.py  run_simulation.py
submodules/netsquid-netbuilder/examples/example_2/: protocols.py  run_simulation.py
submodules/netsquid-netbuilder/examples/example_3/: protocols.py  run_simulation.py
submodules/netsquid-netbuilder/examples/example_4/: config_heralded_fifo.yaml  config_heralded_static.yaml  protocols.py  run_simulation.py
submodules/netsquid-netbuilder/examples/example_5-repeater_chain/: cprotocols.py  protocols.py  run_simulation.py
submodules/netsquid-netbuilder/examples/parameter_sweep_plot/: config.yaml  protocols.py  run_simulation.py
submodules/netsquid-netbuilder/examples/schedule_example/: protocols.py  run_simulation.py
submodules/netsquid-netbuilder/examples/schedule_net_gen/: run_simulation.py
submodules/netsquid-netbuilder/examples/scheduler_collect_events/: config_heralded_fifo.yaml  config_heralded_static.yaml  protocols.py  run_simulation.py
submodules/netsquid-netbuilder/examples/scheduler_model_registration/: example_new_scheduler.py  protocols.py  run_simulation.py
submodules/netsquid-netbuilder/examples/teleporation_repeater_chain/: config_repeater.yaml  protocols.py  run_simulation.py  run_simulation_config.py
submodules/netsquid-netbuilder/examples/test_models/: abstract_node.yaml  heralded_double_click.yaml  heralded_single_click.yaml  protocols.py  run_simulation.py
submodules/netsquid-netbuilder/netsquid_netbuilder/: base_configs.py  data_collectors.py  logger.py  network.py  nodes.py  protocol_base.py  run.py  yaml_loadable.py
submodules/netsquid-netbuilder/netsquid_netbuilder.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
submodules/netsquid-netbuilder/netsquid_netbuilder/builder/: builder_utils.py  metro_hub.py  network_builder.py  repeater_chain.py  temp.py
submodules/netsquid-netbuilder/netsquid_netbuilder/modules/clinks/: default.py  instant.py  interface.py
submodules/netsquid-netbuilder/netsquid_netbuilder/modules/links/: depolarise.py  heralded_double_click.py  heralded_single_click.py  interface.py  nv.py  perfect.py  util.py
submodules/netsquid-netbuilder/netsquid_netbuilder/modules/photonic_interface/: depolarizing.py  interface.py
submodules/netsquid-netbuilder/netsquid_netbuilder/modules/qdevices/: generic.py  interface.py  nv.py
submodules/netsquid-netbuilder/netsquid_netbuilder/modules/qrep_chain_control/: interface.py
submodules/netsquid-netbuilder/netsquid_netbuilder/modules/qrep_chain_control/swap_asap/: swap_asap.py  swap_asap_builder.py  swap_asap_egp.py  swap_asap_service.py
submodules/netsquid-netbuilder/netsquid_netbuilder/modules/scheduler/: fifo.py  interface.py  static.py
submodules/netsquid-netbuilder/netsquid_netbuilder/test_utils/: clink_test_protocol.py  fidelity.py  link_test_protocol.py  network_generation.py  scheduler_test_protocol.py  test_builder.py
submodules/netsquid-netbuilder/netsquid_netbuilder/util/: data_collectors.py  fidelity.py  network_generation.py  test_builder.py  test_protocol_agreement_service.py  test_protocol_clink.py  test_protocol_link.py  test_protocol_scheduler.py
submodules/netsquid-netbuilder/tests/: test_agreement_service.py  test_clink.py  test_mh.py  test_photonic_interface.py  test_repeater_chain.py  test_scheduler.py
submodules/netsquid-netbuilder/tests/links/: test_perfect.py
submodules/netsquid-netbuilder/tests/yaml_configs/: metro_hub.yaml  metro_hub_depolarise.yaml  metro_hub_single-click-heralded.yaml
(+663 files in other folders)
