[build-system]
requires = ["setuptools>=58", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
line_length = 88
use_parentheses = true

[tool.pytest.ini_options]
# ignore deprecation warnings coming from external packages using NetSquid (i.e. outside of SquidASM's control)
filterwarnings = ["ignore::DeprecationWarning"]
