[metadata]
name = squidasm
version = 0.8.3
author = Axel Dahlberg, Bart van der Vecht
author-email = b.vandervecht@tudelft.nl
description = NetSquid simulator for quantum networks running NetQASM applications
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
home-page = https://github.com/QuTech-Delft/squidasm
url = https://github.com/QuTech-Delft/squidasm
python_requires = >=3.7
