[metadata]
name = squidasm
author = QuTech
author_email = b.vandervecht@tudelft.nl
description = NetSquid simulator for quantum networks running NetQASM applications
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
home_page = https://github.com/QuTech-Delft/squidasm
url = https://github.com/QuTech-Delft/squidasm
python_requires = >=3.7

[options]
packages = squidasm
include_package_data = True
install_requires = 
    netsquid-netbuilder >=0.1.0, <0.2.0
    click >=8.0, <9.0
    numpy >=1.22, <1.23
    scipy >=1.8, <1.9
    pydantic >=1.8.2, < 3.0
    pydynaa >=0.3, <2.0
    netsquid >=1.1.2, <2.0
    bitarray >=2.8.0, <3.0.0
    netqasm >=0.11.2
    pytest >=7.1, <8.0

[options.extras_require]
dev =
    types-PyYAML >=6.0, <7.0
    flake8 >=4.0, <5.0
    isort >=5.10, <5.11
    black >=22.3, <22.4
    mypy >=0.950, <0.951
    pygments >=2.14

rtd =
	sphinx ==6.1.3
	sphinx-rtd-theme ==1.2.0
	sphinx-autodoc-typehints ==1.22
