[metadata]
name = netsquid-netbuilder
version = 0.0.1
author = QuTech
author_email = M.K.vanHooft@tudelft.nl
description = Netsquid snippet for a quantum network builder and relevant interfaces
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
home_page = TODO
url = TODO
python_requires = >=3.7

[options]
packages = netsquid_netbuilder
include_package_data = True
install_requires = 
    click >=8.0, <9.0
    numpy >=1.22, <1.23
    scipy >=1.8, <1.9
    pydantic >=1.8.2
    pydynaa >=0.3, <1.0
    netsquid >=1.0.6, <2.0
    netqasm >=0.11.2
    pytest >=7.1, <8.0

[options.extras_require]
dev =
    types-PyYAML >=6.0, <7.0
    flake8 >=4.0, <5.0
    isort >=5.10, <5.11
    black >=22.3, <22.4
    mypy >=0.950, <0.951
    pygments >=2.14

rtd =
	sphinx ==6.1.3
	sphinx-rtd-theme ==1.2.0
	sphinx-autodoc-typehints ==1.22
